<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PuckPerfect</string>
    <string name="email_message">Email Address</string>
    <string name="password_message">Password</string>
    <string name="signin_message">PuckPerfect</string>
    <string name="remember_me">Remember me</string>
    <string name="signin_button">Sign in</string>
    <string name="not_a_member">Not a member?</string>
    <string name="new_account">Create New Account</string>
    <string name="BT_UUID">05f2ab08-6f32-4123-9b95-8f036090034e</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>

    <string name="intro_message">
        <![CDATA[


            This application allows two Android devices to carry out two-way text chat over
            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:
              (1) Scanning for other Bluetooth devices
              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
              (3) Establishing RFCOMM channels/sockets
              (4) Connecting to a remote device
              (5) Transfering data over Bluetooth


        ]]>
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_helpscreen">Helpscreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_orientation_title">Set Orientation</string>
    <string name="pref_orientation_summary">Set the orientation</string>
    <string name="pref_uuid_title">Change UUID</string>
    <string name="pref_uuid_summary">Use non-standard serial UUID</string>
    <string name="pref_uuid_update">Update UUID</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="pref_text_buffer_title">Input Buffer Size (In Chars)</string>
    <string name="pref_text_buffer_summary">Change the receive text buffer size</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration_message">Registration</string>
    <string name="account_type_label">Account Type</string>
    <string name="player_type">Player</string>
    <string name="coach_type">Coach</string>
    <string name="parent_type">Parent</string>
    <string name="player_info">Player Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hockey_level">Hockey Level</string>
    <string name="skill_level">Skill Level</string>
    <string name="handedness">Handedness</string>
    <string name="left_hand">Lefty</string>
    <string name="right_hand">Righty</string>
    <string name="create_account">Create Account</string>
    <string name="coach_info">Coach Information</string>
    <string name="parent_info">Parent Information</string>
    <string name="child_name">Child\'s Name</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="practice">Practice</string>
    <string name="stats">Stats</string>
    <string name="logout">Logout</string>
    <string name="figure_8">Figure 8 Drill</string>
    <string name="figure_8_description">1. Start with your feet facing toward the cones.\n\n
                                        2. Place the ball in the center of the two cones with your stick on the right side of the ball.\n\n
                                        3. When the drill begins, move the ball toward the top of the left cone and follow the path as shown above.
                                </string>
    <string name="age_group">Age Group</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="end_button">Finish</string>
    <string name="connectGlove1">R Glove</string>
    <string name="connectGlove2">L Glove</string>
    <string name="connectCones">Cones</string>
    <string name="progress">Progress</string>
    <string name="debug">Debug</string>
    <string name="setup">Drill Setup</string>
</resources>
